<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <com.millonarios.MillonariosFC.utils.FCMillonariosTextView
        android:id="@+id/fcm_tv_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="IMPORTANTE"
        android:textColor="@color/black" />

    <com.millonarios.MillonariosFC.utils.FCMillonariosTextView
        android:id="@+id/fcm_tv_message"
        style="@style/StyleRobotoRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/payu_process"
        android:textColor="@color/black" />

    <com.millonarios.MillonariosFC.utils.FCMillonariosTextView
        android:id="@+id/fcm_tv_message2"
        style="@style/StyleRobotoRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:text="@string/payu_process_verify"
        android:textColor="@color/black" />

    <com.millonarios.MillonariosFC.utils.FCMillonariosTextView
        android:id="@+id/fcm_tv_data_user"
        style="@style/StyleRobotoRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="user"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_not"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounder_button"
                android:text="@string/not"

                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounder_button_blue"
                android:text="@string/yes"

                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>

</LinearLayout>