<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounder_button_white"
    android:orientation="vertical"
    android:padding="10dp">

    <com.BarcelonaSC.BarcelonaApp.utils.FCMillonariosTextView
        style="@style/StyleRobotoBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/label_dialog_share_vote"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--CONTENT_ACTION-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_return"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounder_button_primary"
                android:text="@string/not"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounder_button"
                android:text="@string/yes"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>

</LinearLayout>