<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodorado"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <com.millonarios.MillonariosFC.utils.FCMillonariosTextView
            android:id="@+id/FCMillonariosTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/cancelation_title"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.millonarios.MillonariosFC.utils.FCMillonariosTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/FCMillonariosTextView3"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/cancelar_subtitle"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:paddingTop="10dp">

        <android.support.v7.widget.RecyclerView

            android:id="@+id/rl_cancelation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <EditText
            android:id="@+id/et_other_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_suscribirme"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:hint="Otras"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_suscribirme"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_1"
            android:text="@string/continuar"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>