<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:background="@color/colorPrimary"
    android:scrollbars="vertical">

    <RelativeLayout
        android:id="@+id/rl_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:padding="8dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/close" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="5dp">

            <com.BarcelonaSC.BarcelonaApp.utils.FCMillonariosTextView
                android:id="@+id/tv_apodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:text="APODO HINCHAAAAAAAAAAAAAAAAAAAAAAAAA"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/silueta" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbars="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <include layout="@layout/view_hincha_oficial" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_iniciar_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/perfil_btn_2"
                android:padding="10dp">

                <com.BarcelonaSC.BarcelonaApp.utils.FCMillonariosTextView
                    android:id="@+id/tv_iniciar_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/iniciar_chat"
                    android:padding="5dp"
                    android:text="@string/init_chat"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_invitar_grupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/perfil_btn_3"
                android:padding="10dp">

                <com.BarcelonaSC.BarcelonaApp.utils.FCMillonariosTextView
                    android:id="@+id/tv_invitar_grupo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableEnd="@drawable/invitar_grupo"
                    android:drawablePadding="5dp"
                    android:ems="7"
                    android:text="@string/invited_grupo"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

            <com.BarcelonaSC.BarcelonaApp.utils.FCMillonariosTextView
                android:id="@+id/tv_bloquear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/block"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>